+ Felber: Change Everything.

--- a/lijst.html
+++ b/lijst.html
@@ -56,11 +56,13 @@
 
   <h2>Science and Philosophy</h2>
   <ul>
+    <!--
     <li><del>Parkin, Alan J.: 
       <strong><i class="booktitle">Essential Cognitive Psychology</i></strong>. 
       [2001] Routlege, 2014.
       <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.</del>
     </li>
+    -->
     <li>Scholar, Richard:
       <i class="booktitle">Montaigne and the Art of Free-Thinking</i>.
       Peter Lang, 2016. (234 pages)
@@ -277,8 +279,12 @@
       Zed Books, 2011. 3nd edition, 2015.
       <a href="https://www.zedbooks.net/shop/book/the-global-minotaur/"><abbr>ISBN</abbr> 9781783606108</a>.
     </li>
+    <li>Felber, Christian:
+      <strong><i class="booktitle">Change Everything: Creating an Economy for the Common Good</i></strong>.
+      Zed Books, 2015.
+      <a href="https://www.zedbooks.net/shop/book/change-everything/"><abbr>ISBN</abbr> 9781783604722</a>.
+    </li>
     <!-- 
-      * ! Christian Felber: Change Everything: Creating an Economy for the Common Good. Zed Books: https://www.zedbooks.net/shop/book/change-everything/ 
       * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
       * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
       * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
