+ Monbio: Out of the Wreckage

--- a/lijst.html
+++ b/lijst.html
@@ -284,6 +284,11 @@
       Zed Books, 2015.
       <a href="https://www.zedbooks.net/shop/book/change-everything/"><abbr>ISBN</abbr> 9781783604722</a>.
     </li>
+    <li>Monbiot, George:
+      <strong><i class="booktitle">Out of the Wreckage: A New Politics for an Age of Crisis</i></strong>.
+      Verso Books, 2017.
+      <a href="https://www.versobooks.com/books/2571-out-of-the-wreckage"><abbr>ISBN</abbr> 9781786632883</a>.
+    </li>
     <!-- 
       * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
       * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
