J. Heers: Le Moyen Age, une imposture.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -888,6 +888,10 @@
         <i class="booktitle" lang="fr">Pour en finir avec le Moyen Age</i>. [1944] Points, 2014. 
         <a href="http://www.seuil.com/ouvrage/pour-en-finir-avec-le-moyen-age-regine-pernoud/9782757841075" hreflang="fr"><abbr>ISBN</abbr> 978-2757841075</a>.
       </li>
+      <li lang="fr">Heers, Jacques:
+        <i class="booktitle">Le Moyen Age, une imposture</i>. Collection Tempus.
+        Perrin, 1992, 2008. <abbr>ISBN</abbr> 978-2262029432.
+      </li>
       <li>Potentially relevant:
         <ul>
           <li>Thomas, Keith:
@@ -907,6 +911,10 @@
         </ul>
       </li>
     </ul>
+    <!--
+      * François Reynaert: Nos ancêtres les Gaulois et autres fadaise. Librairie Anthème Fayard, 2010. ISBN 978-2-213-66113-1.
+      * Jean-louis Brunaux: Nos ancêtres les Gaulois. Points, 2015. (ISBN 978-2757853122) 
+    -->
 
     <h4>1511, A Year in the History of the Vatican</h4>
     <p>In 1511, Raphael finished his painting
