Link to archive for 10th Science Day.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -92,6 +92,10 @@
         <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
         20 January 2017.
       </li>
+      <li>
+        <a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day">10th Science Day</a>,
+        22 December 2017.
+      </li>
     </ul>
 
     <h2>Science Day Topics</h2>
