Topics 10th Science Day.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -86,15 +86,30 @@
       </li>
       <li>
         <a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day">8th Science Day</a>,
-        24 June 2016.
+        24 June 2016. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
       <li>
         <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
-        20 January 2017.
+        20 January 2017. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
       <li>
         <a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day">10th Science Day</a>,
-        22 December 2017.
+        22 December 2017. Topics:
+        <ul>
+          <li>Technological Singularity (<span lang="de">Andreas Stiegler</span>, 150 minutes, in German),</li>
+          <li>Genetically Modified Organisms (<span lang="de">Benjamin Morgner</span>, 82 minutes, in German),</li>
+          <li>The Shock Doctrine (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
+        </ul>
       </li>
     </ul>
 
