Science Day topics Dec 2015, June 2016.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -65,34 +65,64 @@
     <p>Below is a list of the web pages where the archived videos can be found.</p>
     <ul>
       <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
-        21 December 2012.
+        21 December 2012. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
-        21 June 2013.
+        21 June 2013. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
-        18 November 2013.
+        18 November 2013. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
         9 May 2014.
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
-        12 December 2014.
-      </li>
-      <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
-        26 June 2015. 
-      </li>
-      <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
-        18 December 2015. <!--Topics:
+        12 December 2014. <!--Topics:
         <ul>
           <li></li>
           <li></li>
           <li></li>
-        </ul>--> 
+        </ul>-->
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
+        26 June 2015. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
+        18 December 2015. Topics:
+        <ul>
+          <li>The Dark Side (<span lang="de">Andreas Stiegler</span>, 130 minutes, in German),</li>
+          <li>Marine Biology (<span lang="de">Benjamin Morgner</span>, 62 minutes, in German),</li>
+          <li>A Biochemical Approach to Nutrition (<span lang="de">Stefan Radicke</span>, 95 minutes, in German; no sound in the first minute).</li>
+        </ul>
       </li>
       <li>
         <a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day">8th Science Day</a>,
-        24 June 2016.
+        24 June 2016. Topics:
+        <ul>
+          <li>Intelligence (<span lang="de">Andreas Stiegler</span>, 148 minutes, in German),</li>
+          <li>Motivation (<span lang="de">Maximilian Krauß</span>, 90 minutes, in German),</li>
+          <li>Cuba (<span lang="de">Benjamin Morgner</span>, 120 minutes, in German).</li>
+        </ul>
       </li>
       <li>
         <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
