Presentations Science Day June 2015.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -100,12 +100,12 @@
         </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
-        26 June 2015. <!--Topics:
+        26 June 2015. Topics:
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
+          <li><span lang="de">Relativitätstheorie (Andreas Stiegler</span>, 110 minutes, in German),</li>
+          <li>Horror in <abbr>VR</abbr> (<span lang="de">Maximilian Krauß</span>, 97 minutes<!--@@languange?-->.</li>
+          <!--<li>Ludwig Fleck - no video</li>-->
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
         18 December 2015. Topics:
