Science Day topics December 2014.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -92,19 +92,19 @@
         9 May 2014.
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
-        12 December 2014. <!--Topics:
+        12 December 2014. Topics:
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
+          <li><span lang="de">Bildsensoren (Johannes Zink</span>, 64 minutes, in German),</li>
+          <li>The Battle Against Typhus (<span lang="nl">Christophe Strobbe</span>, 50 minutes, in English),</li>
+          <li>Alien Life (<span lang="de">Andreas Stiegler</span>, 158 minutes, in German).</li>
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
         26 June 2015. Topics:
         <ul>
           <li><span lang="de">Relativitätstheorie (Andreas Stiegler</span>, 110 minutes, in German),</li>
           <li>Horror in <abbr>VR</abbr> (<span lang="de">Maximilian Krauß</span>, 97 minutes<!--@@languange?-->.</li>
-          <!--<li>Ludwig Fleck - no video</li>-->
+          <!--<li>Ludwig Fleck: cancelled</li>-->
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
