--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -81,12 +81,12 @@
         </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
-        18 November 2013. <!--Topics:
+        18 November 2013. Topics:
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
+          <li>Game Physics: <span lang="de">Fussball (Roland Schmitz</span>, 47 minutes, in German),</li>
+          <li>Why Mandarin Is So Damn Hard to Learn (<span lang="nl">Christophe Strobbe</span>, 85 minutes, in English),</li>
+          <li>Black Holes (<span lang="de">Andreas Stiegler</span>, 137 minutes, in German)</li>
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
         9 May 2014.
@@ -103,7 +103,7 @@
         26 June 2015. Topics:
         <ul>
           <li><span lang="de">Relativitätstheorie (Andreas Stiegler</span>, 110 minutes, in German),</li>
-          <li>Horror in <abbr>VR</abbr> (<span lang="de">Maximilian Krauß</span>, 97 minutes<!--@@languange?-->.</li>
+          <li>Horror in <abbr>VR</abbr> (<span lang="de">Maximilian Krauß</span>, 97 minutes<!--@@languange?-->).</li>
           <!--<li>Ludwig Fleck: cancelled</li>-->
         </ul>
       </li>
