--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -81,14 +81,19 @@
         </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
-        18 November 2013.
+        18 November 2013. Topics:
+        <ul>
+          <li>Applied Science – Food Security (<span lang="de">Jan Mühlena</span>, 86 minutes, in English), </li>
+          <li>Science – <span lang="de">bei uns? (Walter Kriha</span>, 49 minutes, in German),</li>
+          <li><span lang="de">Wie konnte das passieren? – Entstehung belebter Materie aus unbelebter (Andreas Stiegler</span>, 163 minutes, in German).</li>
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
         9 May 2014. Topics:
         <ul>
           <li>Game Physics: <span lang="de">Fussball (Roland Schmitz</span>, 47 minutes, in German),</li>
           <li>Why Mandarin Is So Damn Hard to Learn (<span lang="nl">Christophe Strobbe</span>, 85 minutes, in English),</li>
-          <li>Black Holes (<span lang="de">Andreas Stiegler</span>, 137 minutes, in German)</li>
+          <li>Black Holes (<span lang="de">Andreas Stiegler</span>, 137 minutes, in German).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
