Science Day topics June 2013.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -73,12 +73,12 @@
         </ul>-->
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
-        21 June 2013. <!--Topics:
+        21 June 2013. Topics:
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
+          <li>Final Frontiers (<span lang="de">Andreas Stiegler</span>, 48 minutes, in German),</li>
+          <li>The Universe (<span lang="de">Andreas Stiegler</span>, 53 minutes, in German),</li>
+          <li>The &ldquo;Great&rdquo; Walls of China  (<span lang="nl">Christophe Strobbe</span>, 65 minutes, in English).</li>
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
         18 November 2013. Topics:
@@ -146,6 +146,13 @@
           <li>Genetically Modified Organisms (<span lang="de">Benjamin Morgner</span>, 82 minutes, in German),</li>
           <li>The Shock Doctrine (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
         </ul>
+      </li>
+      <li>Science Day May/June 2018: date to be determined. <!--Topics:
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>-->
       </li>
     </ul>
 
