--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -65,19 +65,20 @@
     <p>Below is a list of the web pages where the archived videos can be found.</p>
     <ul>
       <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
-        21 December 2012. <!--Topics:
+        21 December 2012. Topics:
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
+          <li>History of the Universe (<span lang="de">Andreas Stiegler</span>, 96 minutes, in German),</li>
+          <li>A Visit to Bletchley Park (<span lang="de">Roland Schmitz</span>, 75 minutes, in German),</li>
+          <li>Going to the Theatre in Shakespeare's Time (<span lang="nl">Christophe Strobbe</span>, 46 minutes, in English),</li>
+          <li>Galactic Inventory (<span lang="de">Andreas Stiegler</span>, 55 minutes, in German).</li>
+        </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
         21 June 2013. Topics:
         <ul>
           <li>Final Frontiers (<span lang="de">Andreas Stiegler</span>, 48 minutes, in German),</li>
           <li>The Universe (<span lang="de">Andreas Stiegler</span>, 53 minutes, in German),</li>
-          <li>The &ldquo;Great&rdquo; Walls of China  (<span lang="nl">Christophe Strobbe</span>, 65 minutes, in English).</li>
+          <li>The &ldquo;Great&rdquo; Walls of China (<span lang="nl">Christophe Strobbe</span>, 65 minutes, in English).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
