hdm_scienceday added to site nav again

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a></li>
           <li><a href="./science/machine-learning.html">Machine Learning</a></li>
           <li><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
-          <!--li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
+          <li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
         </ul>
       </li>
       <li><a href="./humanities/index.html">Humanities</a>
