--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -42,7 +42,7 @@
           <li><a href="../science/machine-learning.html">Machine Learning</a></li>
           <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
           <li class="active"><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
-          <li><a href="../science/hdm_scienceday_ideas.html"><abbr>HdM</abbr> Science Day Ideas</a></li>
+          <!--li><a href="../science/hdm_scienceday_ideas.html"><abbr>HdM</abbr> Science Day Ideas</a></li-->
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
