--- a/lijst.html
+++ b/lijst.html
@@ -464,6 +464,9 @@
       <br />(See also <a href="https://www.youtube.com/watch?v=kuEkMkzgNjM">Former Obama Speechwriter Tells All</a>,
       David Pakman Show, 22.10.2017, 13 minutes.)
     </li>
+    <li>Tegmark, Max: <i class="booktitle">Life 3.0: Being Human in the Age of Artificial Intelligence</i>. Allen Lane, 2017. 
+      <a href="https://www.penguin.co.uk/books/288272/life-3-0/9780241237199/"><abbr>ISBN</abbr> 9780241237199</a>.
+    </li>
     <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
@@ -476,6 +479,28 @@
   <!-- 
     * Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 
     * Christopher Goscha: Vietnam: A New History. Little, Brown & co. / Hachette, 2016 (592 pages) ISBN 9780465094370. https://www.hachettebookgroup.com/titles/christopher-goscha/vietnam/9780465094370/ 
+  -->
+  <!--Hergé & Tintin:
+    * Benoît Peeters: Hergé, fils de Tintin. Flammarion, 2016.
+    * Pierre Assouline: Hergé. Gallimard, 1998.
+    * Jean-Marie Apostolidès: Les métamorphoses de Tintin. Flammarion, 2011. https://www.youtube.com/watch?v=dZkJd10feqQ 
+    * Albert Algoud: Dictionnaire amoureux de Tintin. Plon, 2016: https://www.amazon.fr/Dictionnaire-amoureux-Tintin-Albert-ALGOUD/dp/2259241387/ 
+    * Pol Vandromme: Le Monde de Tintin. La Table Ronde, 1994.
+    * Numa Sadoul: Tintin et moi : Entretiens avec Hergé.  Champs Flammarion (https://www.youtube.com/watch?v=UkFzGNrPCeg)
+  -->
+  <!--
+    * Simon Price, Peter Thonemann: The Birth of Classical Europe: A History from Troy to Augustine (The Penguin History of Europe). Penguin Books, 2011.
+    * Peter Jones: Vote for Caesar: How the Ancient Greeks and Romans Solved the Problems of Today. Orion, 2009.
+    * William Blum: America's Deadliest Export. Zed Books, 2014.
+    * Sebastien Valkenberg: Op denkles: hoe wapenen we ons tegen 'Iedereen heeft zijn eigen waarheid' en andere modieuze denkbeelden. Ambo Anthos, 2015: https://www.amboanthos.nl/boek/op-denkles/ 
+    * Jason W. Moore: Capitalism in the Web of Life: Ecology and the Accumulation of Capital. Verso, 2015.
+    * Adrian Wooldridge, John Micklethwait: The Fourth Revolution: The Global Race to Reinvent the State. Penguin, 2015. Written by two senior editors of The Economist; claims that government is bloated and argues for a return to laissez-faire.
+    * Dirk Van der Cruyse: Madame Palatine. Fayard, 1988.
+    * Bernard Spolsky: Language Management. Cambridge University Press, 2009.
+    * William Clifford: The Ethics of Belief and Other Essays. Prometheus Books, 1999. https://www.amazon.fr/Ethics-Belief-Other-Essays/dp/1573926914/
+    * William James: Writings 1878-1899: Psychology: Briefer Course / The Will to Believe / Talks to Teachers and to Students / Essays. Library of America, 1992. https://www.amazon.fr/William-James-Writings-1878-1899-Psychology/dp/0940450720/ 
+    * William K. Clifford & William James: L’immoralité de la croyance religieuse: L’éthique de la croyance de William Clifford, suivi de La volonté de croire de William James. Agone, 2018: https://agone.org/bancdessais/limmoralitedelacroyancereligieuse/ 
+    * Owen Jones: "Books that moved us forward in 2017": https://www.penguin.co.uk/articles/features/2017/dec/owen-jones-books-that-moved-us-forward-in-2017/
   -->
 
   </main>
