Pécres: Recherche précarisée (2011)

--- a/lijst.html
+++ b/lijst.html
@@ -467,6 +467,10 @@
     <li>Tegmark, Max: <i class="booktitle">Life 3.0: Being Human in the Age of Artificial Intelligence</i>. Allen Lane, 2017. 
       <a href="https://www.penguin.co.uk/books/288272/life-3-0/9780241237199/"><abbr>ISBN</abbr> 9780241237199</a>.
     </li>
+    <li lang="fr"><abbr title="Pour l’Étude des Conditions de travail dans la Recherche et l’Enseignement Supérieur">P.é.c.r.e.s.</abbr>&nbsp;: <i class="booktitle">Recherche précarisée, recherche atomisée: Production et transmission des savoirs à l’heure de la précarisation</i>.
+      Paris: Les Éditions Raisons d’Agir<!--https://fr.wikipedia.org/wiki/Liber-Raisons_d%27agir-->, 2011.
+      <a href="http://www.raisonsdagir-editions.org/catalogue/recherche-precarisee-recherche-atomisee/"><abbr>ISBN</abbr> 978-2-912107-59-6</a>.
+    </li>
     <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
