Halimi: Les Nouveaux chiens de garde

--- a/lijst.html
+++ b/lijst.html
@@ -471,6 +471,11 @@
       Paris: Les Éditions Raisons d’Agir<!--https://fr.wikipedia.org/wiki/Liber-Raisons_d%27agir-->, 2011.
       <a href="http://www.raisonsdagir-editions.org/catalogue/recherche-precarisee-recherche-atomisee/"><abbr>ISBN</abbr> 978-2-912107-59-6</a>.
     </li>
+    <li lang="fr">Halimi, Serge&nbsp;: <i class="booktitle">Les Nouveaux Chiens de garde</i>.
+      [1997] Nouvelle édition actualisée et augmentée. Paris&nbsp;: Les Éditions Raisons d’Agir, 2005.
+      <a href="http://www.raisonsdagir-editions.org/catalogue/les-nouveaux-chiens-de-garde/"><abbr>ISBN</abbr>  978-2-912107-26-8</a>.
+      <!--https://fr.wikipedia.org/wiki/Les_Nouveaux_Chiens_de_garde - Nizan: Les Chiens de garde: https://fr.wikipedia.org/wiki/Les_Chiens_de_garde -->
+    </li>
     <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
