Bloomsbury Encyclopedia of Philosophers.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -515,6 +515,10 @@
       <li>
         <a href="http://www.iep.utm.edu/">Internet Encylopedia of Philosophy: A Peer Reviewed Academic Resource</a>.
       </li>
+      <li><a href="https://www.bloomsburyphilosophers.com/home">Bloomsbury Encylopedia of Philosophers</a>
+        (launched in <a href="https://twitter.com/BloomsburyDigtl/status/950334915614306304">January 2018</a>).
+        <!--See also https://www.bloomsbury.com/bloomsbury-encyclopedia-of-philosophers/117 -->
+      </li>
     </ul>
     <!-- 
     <h3>Skills and Methods</h3>
