U of Cambridge: Glossary of Literary Terms

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -378,6 +378,12 @@
         an online glossary of literary terms.
       </li>
       <!--@@http://web.cn.edu/kwheeler/resource_rhet.html-->
+      <li>University of Cambridge, Faculty of English:
+        <a href="https://www.english.cam.ac.uk/classroom/terms.htm">Glossary of Literary Terms</a>.
+        <!--Further reading listed at bottom of page:
+          "There are many dictionaries of literary terms available. One of the most user-friendly is The Concise Oxford Dictionary of Literary Terms, ed. Chris Baldick (Oxford, 1990). More substantial (and also slightly more expensive) The Penguin Dictionary of Literary Terms and Literary Theory, 4th edition, ed. J.A. Cuddon, revised C. E. Preston (Harmondsworth, 1998). John Lennard, The Poetry Handbook (Oxford, 1996) is a very helpful guide to ways of using this technical vocabulary in practical criticism."
+        -->
+      </li>
       <li>
         <a href="http://www.kristisiegel.com/">Dr. Kristi Siegel's website</a>:
         Kristi Siegel is professor of English at Mount Mary University (Milwaukee, Wisconsin).
