50 most influential psychologists

--- a/science/index.html
+++ b/science/index.html
@@ -913,6 +913,11 @@
 
     <h2>Psychology</h2>
     <ul>
+      <li><a href="https://thebestschools.org/features/most-influential-psychologists-world/">The 50 Most Influential Living Psychologists in the World</a>,
+        <i class="website">The Best Schools</i>, January 2018.
+        <br />For each of the psychologist in the list, the article briefly describes his or her publications, followed by a selection of publications (mainly books).
+        There is a strong bias towards psychologists from the United States.
+      </li>
       <li>Fisher, Carl Erik: 
         <a href="http://nautil.us/issue/45/power/against-willpower">Against Willpower</a>,
         <i class="magazine">Nautilus</i>, 02.02.2017.
