--- a/lijst.html
+++ b/lijst.html
@@ -249,6 +249,10 @@
       <a href="http://www.basicbooks.com/full-details?isbn=9780465060733"><abbr>ISBN</abbr> 978-0465060733</a>.
       <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
     </li>
+    <li lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004. 
+      [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
+      <a href="https://agone.org/elements/legrandbondenarriere/"><abbr>ISBN</abbr> 9782748900514</a>.
+    </li>
     <li>Wolff, Richard D.; Resnick, Stephen A.:
       <i class="booktitle">Contending Economic Theories: Neoclassical, Keynesian, and Marxian</i>. <abbr>MIT</abbr> Press, 2012. (424 pages)
       <a href="https://mitpress.mit.edu/books/contending-economic-theories"><abbr>ISBN</abbr> 9780262018005</a>.
