Wacquant: Punir les pauvres

--- a/lijst.html
+++ b/lijst.html
@@ -253,6 +253,9 @@
       [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
       <a href="https://agone.org/elements/legrandbondenarriere/"><abbr>ISBN</abbr> 9782748900514</a>.
     </li>
+    <li lang="fr">Wacquant, Loïc&nbsp;: <i class="booktitle">Punir les pauvres: Le nouveau gouvernement de l’insécurité sociale</i>. Agone, 2004. 
+      <a href="https://agone.org/contrefeux/punirlespauvres/"><abbr>ISBN</abbr> 2748900235</a>.
+    </li><!--@@neoliberalism -> science day-->
     <li>Wolff, Richard D.; Resnick, Stephen A.:
       <i class="booktitle">Contending Economic Theories: Neoclassical, Keynesian, and Marxian</i>. <abbr>MIT</abbr> Press, 2012. (424 pages)
       <a href="https://mitpress.mit.edu/books/contending-economic-theories"><abbr>ISBN</abbr> 9780262018005</a>.
