Wacquant: Les prisons de la misère.

--- a/lijst.html
+++ b/lijst.html
@@ -256,6 +256,10 @@
     <li lang="fr">Wacquant, Loïc&nbsp;: <i class="booktitle">Punir les pauvres: Le nouveau gouvernement de l’insécurité sociale</i>. Agone, 2004. 
       <a href="https://agone.org/contrefeux/punirlespauvres/"><abbr>ISBN</abbr> 2748900235</a>.
     </li><!--@@neoliberalism -> science day-->
+    <li lang="fr">Wacquant, Loïc&nbsp;: <i class="booktitle">Les prisons de la misère</i>. Les Éditions Raisons d’Agir, 1999. 
+      <a href="http://www.raisonsdagir-editions.org/catalogue/les-prisons-de-la-misere/"><abbr>ISBN</abbr> 978-2-912107-07-7</a>.
+      <br />Édition revue et augmentée, 2011. <abbr>ISBN</abbr> 978-2912107565.
+    </li>
     <li>Wolff, Richard D.; Resnick, Stephen A.:
       <i class="booktitle">Contending Economic Theories: Neoclassical, Keynesian, and Marxian</i>. <abbr>MIT</abbr> Press, 2012. (424 pages)
       <a href="https://mitpress.mit.edu/books/contending-economic-theories"><abbr>ISBN</abbr> 9780262018005</a>.
