D. Rodrik: The Globalization Paradox.

--- a/lijst.html
+++ b/lijst.html
@@ -249,6 +249,15 @@
       <a href="http://www.basicbooks.com/full-details?isbn=9780465060733"><abbr>ISBN</abbr> 978-0465060733</a>.
       <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
     </li>
+    <li>Rodrik, Dani:
+      <i class="booktitle">The Globalization Paradox: Why Global Markets, States, and Democracy Can't Coexist</i>. Oxford University Press, 2012. (370 pages)
+      <a href="https://global.oup.com/ukhe/product/the-globalization-paradox-9780199652525"><abbr>ISBN</abbr>  9780199652525</a>.
+      (See also <a href="http://books.wwnorton.com/books/The-Globalization-Paradox/">W. W. Norton &amp; Company</a>.)
+      <!--Reviews etc.:
+        * https://www.cambridge.org/core/journals/world-trade-review/article/the-globalization-paradox-democracy-and-the-future-of-the-world-economy-by-rodrikdaninew-york-norton-2011/268EE684D0B23D30F3507DE64023B749 
+        * https://www.hks.harvard.edu/centers/cid/publications/books/the-globalization-paradox-democracy-and-the-future-of-the-world-economy 
+      -->
+    </li>
     <li lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004. 
       [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
       <a href="https://agone.org/elements/legrandbondenarriere/"><abbr>ISBN</abbr> 9782748900514</a>.
