Kemp: Quine: beginning in the middle of things

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1390,6 +1390,10 @@
         <a href="https://lareviewofbooks.org/entitled-opinions/richard-rorty-future-philosophy/#!">Richard Rorty on the Future of Philosophy</a>,
         <i class="magazine">Los Angeles Review of Books</i>, 26.09.2017.
       </li>
+      <li>Kemp, Gary:
+        <a href="https://www.the-tls.co.uk/articles/public/van-quine-science-philsoophy/">Quine: beginning in the middle of things</a>,
+        <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr></i>, 09.01.2018.
+      </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
       <li>
