D. Rodrik: Economics Rules.

--- a/lijst.html
+++ b/lijst.html
@@ -258,6 +258,12 @@
         * https://www.hks.harvard.edu/centers/cid/publications/books/the-globalization-paradox-democracy-and-the-future-of-the-world-economy 
       -->
     </li>
+    <li>Rodrik, Dani:
+      <i class="booktitle">Economics Rules: The Rights and Wrongs of the Dismal Science</i>. Oxford University Press, 2017.
+      <a href="https://global.oup.com/academic/product/economics-rules-9780198736905?q=economics%20rules"><abbr>ISBN</abbr>  9780198736905</a>.
+      (W. W. Norton &amp; Company, 2016. <a href="http://books.wwnorton.com/books/detail.aspx?ID=4294992109"><abbr>ISBN</abbr> 978-0-393-35341-9</a>.)
+      (See also <a href="http://www.lse.ac.uk/website-archive/newsAndMedia/videoAndAudio/channels/publicLecturesAndEvents/player.aspx?&id=3225">Economics Rules: the rights and wrongs of the dismal science</a> (video).)
+    </li>
     <li lang="fr">Halimi, Serge&nbsp;: <a href="https://fr.wikipedia.org/wiki/Le_Grand_Bond_en_arri%C3%A8re"><i class="booktitle">Le Grand Bond en arrière&nbsp;: Comment l’ordre libéral s’est imposé au monde</i></a>. 2004. 
       [Fayard, 2004] Nouvelle édition revue et actualisée par l’auteur. Agon, 2012. (792 pages)
       <a href="https://agone.org/elements/legrandbondenarriere/"><abbr>ISBN</abbr> 9782748900514</a>.
