+ Impending end or crisis of capitalism.

--- a/lijst.html
+++ b/lijst.html
@@ -317,15 +317,18 @@
       Verso Books, 2017.
       <a href="https://www.versobooks.com/books/2571-out-of-the-wreckage"><abbr>ISBN</abbr> 9781786632883</a>.
     </li>
-    <!-- 
+    <!--
       * Tim Di Muzio: The 1% and the Rest of Us: A Political Economy of Dominant Ownership. Zed Books: https://www.zedbooks.net/shop/book/the-1-and-the-rest-of-us/ 
-      * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
       * Eric Hazan and Kamo: First Measures of the Coming Insurrection. Zed Books: https://www.zedbooks.net/shop/book/first-measures-of-the-coming-insurrection/ 
       * Aidan Ricketts: The Activists' Handbook: A Step-by-Step Guide to Participatory Democracy. Zed Books: https://www.zedbooks.net/shop/book/the-activists-handbook/ 
       * Anna Feigenbaum, Fabian Frenzel, and Patrick McCurdy: Protest Camps. Zed Books: https://www.zedbooks.net/shop/book/protest-camps/ 
       * William Blum: America's Deadliest Export: Democracy – The Truth about US Foreign Policy and Everything Else. Zed Books: https://www.zedbooks.net/shop/book/americas-deadliest-export/
         [possible follow up to Naomi Klein's "The Shock Doctrine"]
       * Roger Burbach, Michael Fox, and Federico Fuentes: Latin America's Turbulent Transitions: The Future of Twenty-First Century Socialism. Zed Books: https://www.zedbooks.net/shop/book/latin-americas-turbulent-transitions/ 
+      * ? Ewald Engelen: De schaduwelite voor en na de crisis (2014, http://nl.aup.nl/books/9789089646705-de-schaduwelite-voor-en-na-de-crisis.html); 'Engelen is buitengewoon kritisch over de economische wetenschap, waarvan hij de beoefenaars beschouwt als "verkapte mathematici die worden afgerekend op publicaties in verkapte wiskundetijdschriften, (...)"'
+      * ? Ewald Engelen et al: After the Great Complacence: Financial Crisis and the Politics of Reform. Oxford UP, 2011: https://global.oup.com/academic/product/after-the-great-complacence-9780199589081 
+      * ? Morton Keller: Obama's Time: A History. Oxford UP, 2015: https://global.oup.com/academic/product/obamas-time-9780199383375 
+      * ? Colin Dueck: The Obama Doctrine: American Grand Strategy Today. Oxford UP, 2015: https://global.oup.com/academic/product/the-obama-doctrine-9780190202620 
     -->
     <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
       Flammarion, 2017.
@@ -348,6 +351,23 @@
       <!-- Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
     </li>
   </ul>
+
+  <p>The impending end or crisis of capitalism:</p>
+  <ul>
+    <li lang="de"><a href="http://www.mpifg.de/people/ws/publikation_en.asp">Streeck, Wolfgang</a>:
+      <i class="booktitle">Gekaufte Zeit - Die vertagte Krise des demokratischen Kapitalismus</i>. Suhrkamp, 2015.
+      <a href="http://www.suhrkamp.de/buecher/gekaufte_zeit-wolfgang_streeck_29733.html"><abbr>ISBN</abbr> 978-3-518-29733-9</a>.
+      <!--
+        * Wolfgang Streeck: "Buying Time: the delayed crisis of democratic capitalism", LSE (92 minutes; uploaded 23.10.2014): https://www.youtube.com/watch?v=B5r9rqgPUVU 
+        * Karl Weber: "Zusammenfassung von Wolfgang Streeck’s Studie „Die gekaufte Zeit – Die vertagte Krise des demokratischen Kapitalismus“", Kontrapunkt, 23.01.2014: http://www.rat-kontrapunkt.ch/manifeste-und-debatten/kontrapunkt-debatten/gekaufte-zeit-kontrapunkt-debatten/zusammenfassung-von-wolfgang-streecks-studie-die-gekaufte-zeit-die-vertagte-krise-des-demokratischen-kapitalismus/
+        * https://www.perlentaucher.de/buch/wolfgang-streeck/gekaufte-zeit.html 
+        * Editie Leesmagazijn: "Gekochte Tijd, Wolfgang Streeck - Ewald Engelen interview and discussion @ Goethe Institut Amsterdam" (05.04.2015: 100 min): https://www.youtube.com/watch?v=fuTLNrHPFZc
+      -->
+    </li>
+  </ul>
+  <!--
+    * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
+  -->
 
   <h2>Literature</h2>
   <ul>
@@ -536,6 +556,7 @@
     * William James: Writings 1878-1899: Psychology: Briefer Course / The Will to Believe / Talks to Teachers and to Students / Essays. Library of America, 1992. https://www.amazon.fr/William-James-Writings-1878-1899-Psychology/dp/0940450720/ 
     * William K. Clifford & William James: L’immoralité de la croyance religieuse: L’éthique de la croyance de William Clifford, suivi de La volonté de croire de William James. Agone, 2018: https://agone.org/bancdessais/limmoralitedelacroyancereligieuse/ 
     * Owen Jones: "Books that moved us forward in 2017": https://www.penguin.co.uk/articles/features/2017/dec/owen-jones-books-that-moved-us-forward-in-2017/
+    * Twelve Theories of Human Nature, sixth edition, 2012: https://global.oup.com/academic/product/twelve-theories-of-human-nature-9780199859030?q=theories%20of%20human%20nature 
   -->
 
   </main>
