Roper: Witch Craze (Yale UP, 2006).

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -658,6 +658,11 @@
         * Istanbul: The Imperial City
         * The Grand Turk: Sultan Mehmet II - Conqueror of Constantinople, Master of an Empire and Lord of Two Seas
     -->
+    <!--The Great Game:
+      * The Great Game (Wikipedia): https://en.wikipedia.org/wiki/The_Great_Game 
+      * Rudyard Kipling: Kim (novel, 1901): "The novel made the term "Great Game" popular and introduced the theme of great power rivalry and intrigue." (Wikipedia)
+      * M. M. Kaye: The Far Pavilions (1978): https://en.wikipedia.org/wiki/The_Far_Pavilions 
+    -->
     <h3>1177 <abbr>B.C.</abbr>: The Year Civilization Collapsed</h3>
     <ul>
       <li>Cline, Eric H.:
@@ -812,6 +817,8 @@
         <br />
         Frenschkowski, Marco: <span lang="de"><i class="booktitle">Die Hexen. Eine kulturhistorische Analyse</i>. Marix Verlag</span>, 2016. 
         <a href="http://www.verlagshaus-roemerweg.de/Marix_Verlag/Marco_Frenschkowski-Die_Hexen-EAN:9783865399656.html"><abbr>ISBN</abbr> 978-3-86539-965-6</a>.
+        <br />Roper, Lyndal: <i class="booktitle">Witch Craze: Terror and Fantasy in Baroque Germany</i>. Yale University Press, 2006.
+        <a href="https://yalebooks.yale.edu/book/9780300119831/witch-craze"><abbr>ISBN</abbr> 9780300119831</a>.
       </li>
       <li><span lang="fr">Droit du seigneur</span> <abbr>aka</abbr> <span lang="la">ius primae noctis</span>: 
         <a href="https://en.wikipedia.org/wiki/Droit_du_seigneur" lang="fr" hreflang="en">droit du seigneur (Wikipedia)</a>. 
@@ -860,7 +867,7 @@
         <ul>
           <li>Thomas, Keith:
             <i class="booktitle">Religion and the Decline of Magic</i>. Peregrine Books, 1978. 
-            <!-- Used by Fintan O'Toole: "Shakespeare is Hard, but so is Life". -->
+            <!--Used by Fintan O'Toole: "Shakespeare is Hard, but so is Life".-->
           </li>
           <li lang="de">Schneider, A.; Neumann, M.:
             <i class="booktitle">Menschen, die Geschichte schrieben. Das Spätmittelalter</i>. 
@@ -876,8 +883,9 @@
       </li>
     </ul>
     <!--
-      * François Reynaert: Nos ancêtres les Gaulois et autres fadaise. Librairie Anthème Fayard, 2010. ISBN 978-2-213-66113-1.
+      * François Reynaert: Nos ancêtres les Gaulois et autres fadaises. Librairie Anthème Fayard, 2010. ISBN 978-2-213-66113-1.
       * Jean-louis Brunaux: Nos ancêtres les Gaulois. Points, 2015. (ISBN 978-2757853122) 
+      * "English statute of 1401 permitting the civil authorities to burn heretics (De haeretico comburendo)" http://d.lib.rochester.edu/teams/text/dean-medieval-english-political-writings-preface (James M. Dean: "Medieval English Political Writings: Preface")
     -->
 
     <h3>1511, A Year in the History of the Vatican</h3>
