Karetryk: Russian Emigré Short Stories.

--- a/lijst.html
+++ b/lijst.html
@@ -522,12 +522,15 @@
       <a href="http://www.raisonsdagir-editions.org/catalogue/les-nouveaux-chiens-de-garde/"><abbr>ISBN</abbr>  978-2-912107-26-8</a>.
       <!--https://fr.wikipedia.org/wiki/Les_Nouveaux_Chiens_de_garde - Nizan: Les Chiens de garde: https://fr.wikipedia.org/wiki/Les_Chiens_de_garde -->
     </li>
+    <li>Karetryk, Bryan (editor): <i class="booktitle">Russian Émigré Short Stories from Bunin to Yanovsky</i>. Penguin, 2017. (464 pages)
+      <a href="https://www.penguin.co.uk/books/283003/russian-emigre-short-stories-from-bunin-to-yanovsky/"><abbr>ISBN</abbr> 978 0241310908</a>.
+    </li>
     <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
     </li>
     <li> : <i class="booktitle"></i>. 
-      <abbr>ISBN</abbr> 
+      <abbr>ISBN</abbr>.
     </li>
     -->
   </ul>
