Kaube: Ohne Entsagung keine Forschung.

--- a/science/index.html
+++ b/science/index.html
@@ -1027,6 +1027,14 @@
         on the author's YouTube channel.
         <!--book recommended by George Monbiot: https://www.youtube.com/watch?v=dBe7bNSBa0w -->
       </li>
+      <li lang="de">Kaube, Jürgen:
+        <a href="http://www.faz.net/aktuell/feuilleton/geisteswissenschaften/max-webers-vortrag-wissenschaft-als-beruf-15280078.html">Ohne Entsagung keine Forschung</a>
+        <i class="newspaper">Frankfurter Allgemeine Zeitung</i>, 07.11.2017.
+        <br /><span lang="en">Article about the lecture
+        <a href="https://de.wikipedia.org/wiki/Wissenschaft_als_Beruf" hreflang="de" lang="de">Wissenschaft als Beruf</a>&nbsp;/
+        <a href="https://en.wikipedia.org/wiki/Science_as_a_Vocation" hreflang="en" lang="en">Science as a Vocation</a>
+        that <span lang="de">Max Weber</span> delivered in Munich in November 1917.
+      </li>
       <li>Sewell, Martin:
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
