Weber: Wissenschaft als Beruf.

--- a/science/index.html
+++ b/science/index.html
@@ -1035,6 +1035,15 @@
         <a href="https://en.wikipedia.org/wiki/Science_as_a_Vocation" hreflang="en" lang="en">Science as a Vocation</a>
         that <span lang="de">Max Weber</span> delivered in Munich in November 1917.
       </li>
+      <li lang="de">Weber, Max:
+        <a href="https://de.wikisource.org/wiki/Wissenschaft_als_Beruf" hreflang="de">Wissenschaft als Beruf</a>
+        (<span lang="en">Wikisource</span>).
+      </li>
+      <li lang="de">Weber, Max; Bormuth, Matthias (<abbr>Hrsg.</abbr>):
+        <i class="booktitle">Wissenschaft als Beruf. Eine Debatte</i>. Fröhliche Wissenschaft <abbr>Bd.</abbr> 133. Berlin: Matthes &amp; Seitz, 2017.
+        <a href="https://www.matthes-seitz-berlin.de/buch/wissenschaft-als-beruf-ebook.html" hreflang="de"><abbr>ISBN</abbr> 978-3-95757-569-2 (<abbr>EPUB</abbr>)</a>&nbsp;
+        <a href="https://www.matthes-seitz-berlin.de/buch/wissenschaft-als-beruf.html" hreflang="de"><abbr>ISBN</abbr> 978-3-95757-518-0</a>.
+      </li>
       <li>Sewell, Martin:
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
