Linn: Microsoft AI that can read a doc ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -317,6 +317,10 @@
         <q>developed an <abbr>AI</abbr>-based attack that targets speech-to-text systems</q>. 
         <q>This means they can, hypothetically, take any audio file and convince a speech-to-text converter – like the one Google Assistant, Siri, or Alexa use to figure out what you’re saying – that it’s something else.</q>
       </li>
+      <li>Linn, Allison:
+        <a href="https://blogs.microsoft.com/ai/microsoft-creates-ai-can-read-document-answer-questions-well-person/">Microsoft creates <abbr>AI</abbr> that can read a document and answer questions about it as well as a person</a>,
+        <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
+      </li>
     </ul>
 
   </main>
