Souther: The Making of the Middle Ages.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -879,6 +879,11 @@
             Gallimard, 2016. (400 pages,)
             <a href="http://www.folio-lesite.fr/Catalogue/Folio/Folio-classique/Les-Quinze-Joies-du-mariage"><abbr>ISBN</abbr> 9782070445165</a>.
           </li>
+          <li><a href="https://en.wikipedia.org/wiki/R._W._Southern">Southern, Richard W.</a>:
+            <i class="booktitle">The Making of the Middle Ages</i>. Yale University Press, 1953, 1961.
+            <a href="https://yalebooks.yale.edu/book/9780300002300/making-middle-ages"><abbr>ISBN</abbr> 9780300002300</a>.
+            <!--Wikipedia: "Southern is one of 20 medieval scholars profiled in Norman Cantor's Inventing the Middle Ages: The Lives, Works and Ideas of the Great Medievalists of the Twentieth Century."-->
+          </li>
         </ul>
       </li>
     </ul>
